--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -421,7 +421,7 @@ puntualmente a algún jugador destacado, que podría ser de categorías de promo
     <string name="player_year_def">Año Defucion</string>
     <string name="player_elo">Elo</string>
 
-    <string name="buttonJugadores">Jugadores</string>
+    <string name="buttonJugadores">J U G A D O R E S</string>
 
     <string name="title_player_detalle_activity">Detalle Activity</string>
 
